examples/negative/parse_errors/L1/reserved_end.ob
MODULE Reserved;

VAR END: INTEGER;

END Reserved.
